--- a/src/css/App.styl
+++ b/src/css/App.styl
@@ -2,6 +2,14 @@ div.root {
     text-align: center;
 }
 
+button.buttonClear {
+    background: none;
+    border: none;
+    outline: none;
+    padding: 0;
+    appearance: none;
+}
+
 .kani.vomit {
     animation: gerogero 0.2s infinite linear;
 }
