--- a/src/css/App.styl
+++ b/src/css/App.styl
@@ -1,22 +1,33 @@
 div.root {
-    text-align: center;
+	text-align: center;
 }
 
 button.buttonClear {
-    background: none;
-    border: none;
-    outline: none;
-    padding: 0;
-    appearance: none;
+	background: none;
+	border: none;
+	outline: none;
+	padding: 0;
+	appearance: none;
 }
 
 .kani.vomit {
-    animation: gerogero 0.2s infinite linear;
+	animation: gerogero 0.2s infinite linear;
 }
 
 @keyframes gerogero {
-    0% { transform: translate(0px, 0px); }
-    25% { transform: translate(-10px, 0px); }
-    75% { transform: translate(10px, 0px); }
-    100% { transform: translate(0px, 0px); }
+	0% {
+		transform: translate(0px, 0px);
+	}
+
+	25% {
+		transform: translate(-10px, 0px);
+	}
+
+	75% {
+		transform: translate(10px, 0px);
+	}
+
+	100% {
+		transform: translate(0px, 0px);
+	}
 }
